/*
 * Copyright (C) 2020 Dremio
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package com.dremio.plugin.partsyn;

option java_package = "com.dremio.nessie.server.model";
option java_outer_classname = "ObjectTypes";
option java_generate_equals_and_hash = true;

message PContents {
  oneof ObjectType {
    PIcebergTable iceberg_table = 1;
    PHiveTable hive_table = 2;
    PHiveDatabase hive_database = 3;
    PSqlView sql_view = 4;
    PDeltaLakeTable delta_lake_table = 5;
  }
}

message PIcebergTable {
  string metadata_location = 1;
}

message PHiveTable {
  bytes table = 1;
  repeated bytes partition = 2;
}

message PHiveDatabase {
  bytes database = 1;
}

message PSqlView {
  string sql_text = 1;
  string dialect = 2;
}

message PDeltaLakeTable {
  string last_checkpoint = 1;
  repeated string checkpoint_location_history = 2;
  repeated string metadata_location_history = 3;
}
